# D-PL-VINS

./: README.md
config/: vins_rviz_config.rviz  vins_rviz_config1.rviz  vins_rviz_config_rgbd.rviz
config/euroc/: euroc_config_fix_extrinsic.yaml  lifelong_config.yaml  loop.yaml  loop_ori.yaml  realsense_color_config.yaml
feature_tracker/: CMakeLists.txt
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  linefeature_tracker.cpp  linefeature_tracker.h  linefeature_tracker_node.cpp  parameters.cpp  parameters.h
feature_tracker/src/EDLines/: CMakeLists.txt  test1.cpp
feature_tracker/src/EDLines/include/: edline_detector.h  line.h
feature_tracker/src/EDLines/src/: edline_detector.cpp
feature_tracker/src/line_descriptor/: CMakeLists.txt
feature_tracker/src/line_descriptor/src/: LSDDetector_custom.cpp
image_node_b/src/: image_node_b.cpp
pose_graph/: CMakeLists.txt
pose_graph/src/: keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
pose_graph/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  utility.h
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: debug_test.launch  lifelong.launch  onlytwo.launch  plvins-show-linepoint.launch  realsense_color.launch  realsense_rgbd.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  integration_base.h  line_parameterization.cpp  line_projection_factor.cpp  line_projection_factor.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h  projection_plane_factor.cpp  projection_plane_factor.h  relativepose_factor.cpp  relativepose_factor.h
vins_estimator/src/feature_tracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/frontend/: frontend_data.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/loop-closure/: keyframe_database.cpp  loop_closure.h
vins_estimator/src/plane_detection/: plane_detection.cpp  plane_detection.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  Twist.h  line_geometry.cpp  line_geometry.h  logging.h  math_utils.h  utility.cpp  utility.h  visualization.cpp  visualization.h
